Finished baseline functionality for Patients and Doctors.

--- a/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
@@ -16,7 +16,11 @@
     </div>
 
     <div class="card-action">
-        <a href="{% url 'viewAppointmentsDoctor'%}">View My Appointment</a>
+        <a href="{% url 'viewPastAppointmentsDoctor'%}">View Past Appointments</a>
+    </div>
+
+    <div class="card-action">
+        <a href="{% url 'viewFutureAppointmentsDoctor'%}">View Future Appointments</a>
     </div>
 
     <div class="card-action">
