--- a/HealthCareForm/DoctorPortal/templates/homePage_patient.html
+++ b/HealthCareForm/DoctorPortal/templates/homePage_patient.html
@@ -8,7 +8,10 @@
             <a href="{% url 'viewProfile'%}">View My Profile</a>
           </div>
 
-        View Past Appointments<br>
+        <div class="card-action">
+            <a href="{% url 'viewPastAppointmentsPatient'%}">View Past Appointments</a>
+        </div>
+
         <div class="card-action">
             <a href="{% url 'viewFutureAppointmentsPatient'%}">View Future Appointments</a>
         </div>
@@ -16,9 +19,7 @@
         <div class="card-action">
             <a href="{% url 'scheduleAppointmentPatient'%}">Schedule New Appointment</a>
           </div>
-          <div class="card-action">
-            <a href="{% url 'viewProfile'%}">View My Profile</a>
-          </div>
+        
         View Medical History<br>
 
         <div class="card-action">
