--- a/HealthCareForm/DoctorPortal/templates/doctor_form.html
+++ b/HealthCareForm/DoctorPortal/templates/doctor_form.html
@@ -33,7 +33,7 @@
 		<form method="post">
             {% csrf_token %}
             {{ doctor_form.as_p }}
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" class="form-submit">
         </form></div>
 	</body>
 
