--- a/HealthCareForm/DoctorPortal/static/styles.css
+++ b/HealthCareForm/DoctorPortal/static/styles.css
@@ -286,3 +286,19 @@ table th {
 	opacity: 1;
 	right: 0;
 }
+
+ a:link, a:visited {
+	background-color: #8c1c2d;
+	color: #fff;
+	padding: 10px 20px;
+	border-radius: 5px;
+	border: none;
+	cursor: pointer;
+}
+
+a:hover, a:active {
+	background-color: #6f1624;
+}
+.card-action {
+	padding-bottom: 30px;
+}
