--- a/HealthCareForm/DoctorPortal/templates/scheduleAppointment_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/scheduleAppointment_doctor.html
@@ -1,5 +1,8 @@
+{% extends 'base.html' %}
+{% block content %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Schedule Appointment</button>
+    <button type="submit" class="submitbutton">Schedule Appointment</button>
   </form>
+{% endblock content %}
