updated sidebar urls to point to valid pages

--- a/HealthCareForm/DoctorPortal/templates/base.html
+++ b/HealthCareForm/DoctorPortal/templates/base.html
@@ -19,11 +19,11 @@
     <div class="sidebar">
       <h2>Welcome, <%= username %></h2>
 			<ul>
-				<li><a href="/dashboard">Home</a></li>
-				<li><a href="/taskview">Appointments</a></li>
-				<li><a href="/directory">Patients Directory</a></li>
-				<li><a href="/message">Message</a></li>
-				<li><a href="/logout">Logout</a></li>
+				<li><a href="/home">Home</a></li>
+				<li><a href="/viewFutureAppointmentsDoctor">Appointments</a></li>
+				<li><a href="/viewPatients">Patients Directory</a></li>
+				<!-- <li><a href="/message">Message</a></li> -->
+				<li><a href="/logoutDoctor">Logout</a></li>
 			</ul>
     </div>
     <div class="content">
