--- a/HealthCareForm/DoctorPortal/templates/base.html
+++ b/HealthCareForm/DoctorPortal/templates/base.html
@@ -6,7 +6,7 @@
 			
 		</div>
 		
-		<title>Dashboard - <%= username %></title>
+		<title>Dashboard - {{ user.get_username }}</title>
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
@@ -17,7 +17,7 @@
       <!-- Your header content goes here -->
     </div>
     <div class="sidebar">
-      <h2>Welcome, <%= username %></h2>
+      <h2>Welcome, {{ user.get_username }}</h2>
 			<ul>
 				<li><a href="/home">Home</a></li>
 				<li><a href="/viewFutureAppointmentsDoctor">Appointments</a></li>
