--- a/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Welcome to the Doctor Home Page, Dr. {{user.lname}}</h1>
+    <h1>Welcome to the Doctor Home Page, Dr. {{user.get_username}}</h1>
     <br>
     <ul>
         <div class="card-action">
