remove sidebar from login page

--- a/HealthCareForm/DoctorPortal/templates/loginUser.html
+++ b/HealthCareForm/DoctorPortal/templates/loginUser.html
@@ -1,6 +1,14 @@
 
 {% extends 'base.html' %}
 {% block content %}
+<head>
+    <style>
+        .sidebar {
+            display: none;
+            visibility: hidden;
+        }
+    </style>
+</head>
     <h1>Welcome to the Login Page</h1>
     <br>
     <p>{{ message }}</p>
