--- a/HealthCareForm/DoctorPortal/templates/loginUser.html
+++ b/HealthCareForm/DoctorPortal/templates/loginUser.html
@@ -9,6 +9,8 @@
         }
     </style>
 </head>
+<body>
+    <div class="login-card">
     <h1>Welcome to the Login Page</h1>
     <br>
     <p>{{ message }}</p>
@@ -17,4 +19,9 @@
         {% csrf_token %}
         <button type="submit" >Submit</button>
     </form>
+    </div>
+<!-- https://www.pexels.com/photo/woman-wearing-face-mask-and-gloves-8949835/ -->
+<!-- https://www.pexels.com/photo/a-medical-practitioner-showing-a-patient-paper-7578808/ -->
+<!-- https://www.pexels.com/photo/adult-biology-chemical-chemist-356040/ -->
+</body>
 {% endblock content %}
