--- a/HealthCareForm/DoctorPortal/templates/loginUser.html
+++ b/HealthCareForm/DoctorPortal/templates/loginUser.html
@@ -9,7 +9,7 @@
         }
     </style>
 </head>
-<body>
+<body class="login-page-body">
     <div class="login-card">
         <h1>Welcome to the Login Page</h1>
         <br>
