changed navbar button styling

--- a/HealthCareForm/DoctorPortal/templates/home.html
+++ b/HealthCareForm/DoctorPortal/templates/home.html
@@ -16,11 +16,21 @@
 		<div class="sidebar">
 			<h2>Welcome, <%= username %></h2>
 			<ul>
-				<li><a href="/dashboard">Home</a></li>
+				<li><a class="btn btn-danger" href="/dashboard">Home</a></li>
+				<br>
+				<br>
 				<li><a href="/taskview">Appointments</a></li>
+				<br>
+				<br>
 				<li><a href="/directory">Patients Directory</a></li>
+				<br>
+				<br>
 				<li><a href="/message">Message</a></li>
+				<br>
+				<br>
 				<li><a href="/logout">Logout</a></li>
+				<br>
+				<br>
 			</ul>
 		</div>
 		<title>Dashboard - <%= username %></title>
