--- a/HealthCareForm/DoctorPortal/templates/base.html
+++ b/HealthCareForm/DoctorPortal/templates/base.html
@@ -19,11 +19,11 @@
     <div class="sidebar">
       <h2>Welcome, {{ user.get_username }}</h2>
 			<ul>
-				<li><a href="/home">Home</a></li>
-				<li><a href="/viewFutureAppointmentsDoctor">Appointments</a></li>
-				<li><a href="/viewPatients">Patients Directory</a></li>
+				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/home">Home</a></li>
+				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/viewFutureAppointmentsDoctor">Appointments</a></li>
+				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/viewPatients">Patients Directory</a></li>
 				<!-- <li><a href="/message">Message</a></li> -->
-				<li><a href="/logoutDoctor">Logout</a></li>
+				<li><a class="btn btn-danger" href="/logoutDoctor">Logout</a></li>
 			</ul>
     </div>
     <div class="content">
