headers for dashboard and navbar

--- a/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Welcome to the Doctor Home Page, Dr. {{user.get_username}}</h1>
+    <div class="jumbotron">
+        <h1 class="display-7">Dashboard</h1>
+        <hr class="my-3">
+    </div>
     <br>
     <ul>
         <div class="card-action">
