--- a/HealthCareForm/DoctorPortal/templates/base.html
+++ b/HealthCareForm/DoctorPortal/templates/base.html
@@ -1,23 +1,16 @@
 {% load static %}
 <!doctype html>  
 <html lang="en">  
-  <head> 
-		<div > <!-- added top-header div -->
-			
-		</div>
-		
+  <head> 		
 		<title>Dashboard - {{ user.get_username }}</title>
-		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
 	</head>
   
   <body>
-    <div class="top-header">
-      <!-- Your header content goes here -->
-    </div>
     <div class="sidebar">
-      <h2>Welcome, {{ user.get_username }}</h2>
+      <h5>Welcome, {{ user.get_username }}</h5>
+      <hr class="my-3">
 			<ul>
 				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/home">Home</a></li>
 				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/viewFutureAppointmentsDoctor">Appointments</a></li>
