--- a/HealthCareForm/DoctorPortal/templates/editProfile_patient.html
+++ b/HealthCareForm/DoctorPortal/templates/editProfile_patient.html
@@ -1,8 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_patient.html' %}
 {% block content %}
-    <h1>Editing {{ user.username }}'s Profile</h1>
-    <br>
-
+<div class="jumbotron">
+  <h1 class="display-7">Edit Profile</h1>
+  <hr class="my-3">
+</div>
+<br>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
