--- a/HealthCareForm/DoctorPortal/templates/viewFutureAppointmentsPatient.html
+++ b/HealthCareForm/DoctorPortal/templates/viewFutureAppointmentsPatient.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_patient.html' %}
 {% block content %}
     <h1>Viewing My Upcoming Appointments</h1>
     <br>
