--- a/HealthCareForm/DoctorPortal/templates/viewPastAppointmentsDoctor.html
+++ b/HealthCareForm/DoctorPortal/templates/viewPastAppointmentsDoctor.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_doctor.html' %}
 {% block content %}
     <h1>Viewing My Past Appointments</h1>
     <br>
