--- a/HealthCareForm/DoctorPortal/templates/addPatients_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/addPatients_doctor.html
@@ -1,8 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_doctor.html' %}
 {% block content %}
    
-<h1>Welcome to the Patient Addition Screen!</h1>
-    <br>
+<div class="jumbotron">
+    <h1 class="display-7">Add Patient</h1>
+    <hr class="my-3">
+</div>
 
     {% if patients %}  
         <ul>   
