--- a/HealthCareForm/DoctorPortal/templates/editProfile_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/editProfile_doctor.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_doctor.html' %}
 {% block content %}
     <h1>Editing {{ patient.username }}'s Information</h1>
     <br>
