--- a/HealthCareForm/DoctorPortal/templates/viewAppointments_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/viewAppointments_doctor.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_doctor.html' %}
 {% block content %}
     <h1>Viewing My Active Patients </h1>
     <br>
