--- a/HealthCareForm/DoctorPortal/static/styles.css
+++ b/HealthCareForm/DoctorPortal/static/styles.css
@@ -309,10 +309,10 @@ a:link, a:visited {
 	text-decoration: none;
 }
 
-a:hover, a:active {
+/* a:hover, a:active {
 	background-color: #6f1624;
 	text-decoration: none;
-}
+} */
 /* .card-action {
 	padding-bottom: 30px;
 } */
