--- a/HealthCareForm/DoctorPortal/templates/register.html
+++ b/HealthCareForm/DoctorPortal/templates/register.html
@@ -1,18 +1,10 @@
-{% extends 'base.html' %} 
-  
 {% block content %}  
-  
-<div class = "login">  
-  
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}  
-      
-    <h1>Register Here -- ( hello reed :] )</h1>  
+<div class="jumbotron">
+    <h1 class="display-7">Register</h1>
+    <hr class="my-3">
+  </div>
+  <br>
+<div class = "login"> 
   
          <form method="post" >  
              {% csrf_token %}  
