--- a/HealthCareForm/DoctorPortal/templates/base_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/base_doctor.html
@@ -16,7 +16,9 @@
 				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/viewFutureAppointmentsDoctor">Appointments</a></li>
         <li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/scheduleAppointmentDoctor">Schedule Appointment</a></li>
 				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/viewPatients">Patients Directory</a></li>
+        <li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/addPatient">Add Patients</a></li>
 				<li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/scheduleAppointmentDoctor">Add Appointment</a></li>
+        <li><a class="btn btn-danger" style="margin-bottom: 10px;" href="/addDiagnosis">Add Diagnosis</a></li>
 				<!-- <li><a href="/message">Message</a></li> -->
 				<li><a class="btn btn-danger" href="/logoutDoctor">Logout</a></li>
 			</ul>
