--- a/HealthCareForm/DoctorPortal/templates/viewPastAppointmentsPatient.html
+++ b/HealthCareForm/DoctorPortal/templates/viewPastAppointmentsPatient.html
@@ -1,21 +1,32 @@
 {% extends 'base_patient.html' %}
 {% block content %}
-<div class="jumbotron">
-    <h1 class="display-7">Previous Appointments</h1>
-    <hr class="my-3">
-</div>
-    {% if appts %}  
-        <ul>   
-            {% for a in appts %}  
-               
-                Appointment Date: {{a.apptDate}}  <br>
-                Doctor Notes: {{ a.docNotes }} <br>
-                Patient Notes: {{ a.patientNotes }} <br>
-                Attending Physician: {{ a.staffUser }}
-                <br><br>
+<h1>Viewing My Past Appointments</h1>
+<br>
 
-            {% endfor %}  
-        </ul>   
-    {% endif %}
-    
+{% if appts %}
+<ul>
+    {% for a in appts %}
+    <div class="hstack gap-3">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title"> {{a.apptDate}} </h5>
+                <p class="card-text"> Physician Notes: {{ a.docNotes }}</p>
+                <p class="card-text"> Patient Notes: {{ a.patientNotes }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Physician: {{a.staffUser}}</li>
+                <li class="list-group-item">Patient: {{a.patient}}</li>
+            </ul>
+            <div class="card-body">
+                <a href="{% url 'editAppointmentPatient' patientUsername=user.username apptID=a.id %}"
+                    class="card-link">Edit Appointment</a>
+
+            </div>
+        </div>
+    </div>
+
+    {% endfor %}
+</ul>
+{% endif %}
+
 {% endblock content %}
