Added obfuscation to patient info; added password confirmation for editing patient info.

--- a/HealthCareForm/DoctorPortal/templates/viewPatients_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/viewPatients_doctor.html
@@ -10,7 +10,7 @@
         <ul>   
             {% for p in patients %}  
                
-            <a class="widelink" href="{% url 'viewProfileDoctor' patientUsername=p.patient.username %}">{{p.patient.username}} </a> <br>
+            <a class="widelink" href="{% url 'viewProfileDoctorSecure' patientUsername=p.patient.username %}">{{p.patient.username}} </a> <br>
 
                 {% endfor %}
                 <a href="/addPatient">Add New Patient</a> <br>
