--- a/HealthCareForm/DoctorPortal/templates/editProfile_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/editProfile_doctor.html
@@ -3,7 +3,7 @@
     <h1>Editing {{ patient.username }}'s Information</h1>
     <br>
 
-    <form method="post">
+    <form method="post" class="myformy">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save Changes</button>
