fixed form and added Diagnosis to sidebar

--- a/HealthCareForm/DoctorPortal/templates/addDiagnosis.html
+++ b/HealthCareForm/DoctorPortal/templates/addDiagnosis.html
@@ -1,7 +1,7 @@
 {% extends 'base_doctor.html' %}
 {% block content %}
 
-<form method="post">
+<form method="post" class="myformy">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Submit Diagnosis</button>
