Updating to include Selenium tests. Reinstall requirements.txt, run server in one tab, and run manage.py test in another

--- a/HealthCareForm/DoctorPortal/templates/addDiagnosis.html
+++ b/HealthCareForm/DoctorPortal/templates/addDiagnosis.html
@@ -4,7 +4,7 @@
 <form method="post" class="myformy">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Submit Diagnosis</button>
+    <button name="submit" type="submit">Submit Diagnosis</button>
   </form>
 
       
