--- a/HealthCareForm/DoctorPortal/templates/confirmPasswordDoctor.html
+++ b/HealthCareForm/DoctorPortal/templates/confirmPasswordDoctor.html
@@ -9,7 +9,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Confirm Password</button>
+    <button name="submit" type="submit">Confirm Password</button>
   </form>
 
   {% endblock content %}
