--- a/HealthCareForm/DoctorPortal/templates/editAppointments_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/editAppointments_doctor.html
@@ -8,7 +8,7 @@
     <form method="post" class="myformy">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Save Changes</button>
+        <button name="submit" type="submit">Save Changes</button>
       </form>
     
 {% endblock content %}
