--- a/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/homePage_doctor.html
@@ -9,7 +9,7 @@
 <div class="jumbotron">
     <h6>
         <a href="">Upcoming Appointments</a>
-        <a  style="background-color: rgb(70, 69, 69);" href="/viewPastAppointmentsDoctor">Previous Appointments</a>
+        <a  style="background-color: rgb(70, 69, 69);" href="/viewPastAppointmentsDoctor" id="prevAppts">Previous Appointments</a>
     </h6>
     <hr class="my-3">
 </div>
