--- a/HealthCareForm/DoctorPortal/templates/editProfile_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/editProfile_doctor.html
@@ -6,7 +6,7 @@
     <form method="post" class="myformy">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Save Changes</button>
+        <button name="submit" type="submit">Save Changes</button>
       </form>
     
 {% endblock content %}
