--- a/HealthCareForm/DoctorPortal/templates/loginUser.html
+++ b/HealthCareForm/DoctorPortal/templates/loginUser.html
@@ -17,7 +17,7 @@
         <form method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <button type="submit" >Submit</button>
+            <button name="submit" type="submit" >Submit</button>
         </form>
     </div>
 <!-- https://www.pexels.com/photo/woman-wearing-face-mask-and-gloves-8949835/ -->
