Sync update before new branch

--- a/HealthCareForm/DoctorPortal/templates/viewProfileSecure_doctor.html
+++ b/HealthCareForm/DoctorPortal/templates/viewProfileSecure_doctor.html
@@ -18,7 +18,7 @@
                 <tbody>
                     <tr>
                         <th scope="row">Name</th>
-                        <td> ***************** </td>
+                        <td>{{ patient.lname }}, {{ patient.fname }} </td>
                     </tr>
                     <tr>
                         <th scope="row">Address</th>
